# SkyPlanner

./: .bowerrc  .gitignore  .gitmodules  .kateproject  .vimrc  .wt_translate  CMakeLists.txt  NgcIcCatalog.kdev4  README.md  bower.json  gulpfile.js  manifest.json  ngc.sqlite  package.json  requirements.txt  run  run_tests  seed.sql  setup.py  webpack.config.js
CatalogsParsing/Shakhbazian/: CMakeLists.txt  shakhbazian-vizer.tsv  shakhbazian.cpp
CatalogsParsing/Vizier/: CMakeLists.txt  vizier.cpp  vizier.hpp  vizier_p.hpp
CatalogsParsing/Vizier/Barnard/: CMakeLists.txt  barnard.cpp  barnard.tsv
CatalogsParsing/Vizier/Hickson/: CMakeLists.txt  hickson.cpp  hickson.tsv
data/: CMakeLists.txt  catalogues-min.xz  createDump.sh  get_data  objects_dump.sql.bz2  objects_dump.sql.xz  skyobjects-min.xz  skyobjects-names-min.xz
docker/: CMakeLists.txt  docker-cleanup-container  docker-container
docker/Ubuntu-15.04-build/: CMakeLists.txt  Dockerfile
docker/Ubuntu-15.04-run/: CMakeLists.txt  Dockerfile
docker/Ubuntu-15.10-build/: CMakeLists.txt  Dockerfile
docker/Ubuntu-15.10-run/: CMakeLists.txt  Dockerfile  entrypoint
docker/compose/: .env  docker-compose.yml
docker/compose/SkyPlanner/: docker-compose.yml
docker/compose/skyplanner/: Dockerfile  entrypoint
docker/compose/smtp/: Dockerfile  entrypoint.sh
docker/dev/: .env  Dockerfile  docker-compose.yml  entrypoint
docker/postgres-skyplanner/: CMakeLists.txt  Dockerfile  create_skyplanner_db.sql
scripts/: json_curl  (+11 more)
src/: .astrosessionspage.cpp.kate-swp  .astrosessiontab.cpp.kate-swp  .skyplanner.cpp.kate-swp  CMakeLists.txt  WGoogleMap  WGoogleMap.C  astroplanner.cpp  astroplanner.h  astrosessionpreview.cpp  astrosessionpreview.h  astrosessionslisttab.cpp  astrosessionslisttab.h  astrosessionspage.cpp  astrosessionspage.h  astrosessiontab.cpp  astrosessiontab.h  constellationfinder.cpp  constellationfinder.h  dbohelper.h  dss.cpp  dss.h  ephemeris.cpp  ephemeris.h  exportastrosessionresource.cpp  exportastrosessionresource.h  findneighbour.cpp  findneighbour.h  forecast.cpp  forecast.h  geocoder.cpp  geocoder.h  homepage.cpp  homepage.h  main.cpp  nebuladenomination.cpp  nebuladenomination.h  ngcobject.cpp  ngcobject.h  ngcresource.cpp  ngcresource.h  (+28 more)
src/AstroCpp/: Lunar.h  Vsop.cpp
src/aaplus/: AA+.h  AA+.htm  AA2DCoordinate.h  AA3DCoordinate.h  AAAberration.cpp  AAAberration.h  AAAngularSeparation.cpp  AAAngularSeparation.h  AABinaryStar.cpp  AABinaryStar.h  AACoordinateTransformation.cpp  AACoordinateTransformation.h  AADate.cpp  AADate.h  AADiameters.cpp  AADiameters.h  AADynamicalTime.cpp  AADynamicalTime.h  AAEarth.cpp  AAEarth.h  AAEaster.cpp  AAEaster.h  AAEclipses.cpp  AAEclipses.h  AAEclipticalElements.cpp  AAEclipticalElements.h  AAElementsPlanetaryOrbit.cpp  AAElementsPlanetaryOrbit.h  AAElliptical.cpp  AAElliptical.h  AAEquationOfTime.cpp  AAEquationOfTime.h  AAEquinoxesAndSolstices.cpp  AAEquinoxesAndSolstices.h  AAFK5.cpp  AAFK5.h  AAGalileanMoons.cpp  AAGalileanMoons.h  AAGlobe.cpp  AAGlobe.h  (+80 more)
src/astro/: celestialtoaltaz.cpp  celestialtoaltaz.h  degrees.cpp  degrees.h  radian.cpp  radian.h  rightascension.cpp  rightascension.h
src/models/: Models  astro_group.cpp  astro_group.h  astrosession.cpp  astrosession.h  astrosessionobject.cpp  astrosessionobject.h  catalogue.cpp  catalogue.h  ephemeris_cache.h  models.h  nebuladenomination.cpp  nebuladenomination.h  ngcobject.cpp  ngcobject.h  ptr_defs.h  source_files.cmake  telescope.cpp  telescope.h  user.cpp  user.h  usersetting.cpp  usersetting.h  viewport.cpp  viewport.h
src/openweather/: openweather.cpp  openweather.h  weather.cpp  weather.h  weathercity.cpp  weathercity.h  weatherforecast.cpp  weatherforecast.h  weathersummary.cpp  weathersummary.h  weathertemperature.cpp  weathertemperature.h
src/openweather/private/: weather_p.h  weathercity_p.h  weatherforecast_p.h
src/private/: astroplanner_p.h  astrosessionpreview_p.h  astrosessionslisttab_p.h  astrosessionspage_p.h  astrosessiontab_p.h  ephemeris_p.h  exportastrosessionresource_p.h  forecast_p.h  homepage_p.h  placewidget_p.h  printableastrosessionresource_p.h  selectobjectswidget_p.h  sendfeedbackpage_p.hpp  session_p.h  skyplanner_p.h  telescopespage_p.h  usersettingspage_p.h
src/utils/: autopostresource.cpp  autopostresource.h  cache.h  curl.cpp  curl.h  d_ptr.h  d_ptr_implementation.h  format.h  utils.cpp  utils.h
src/utils/private/: curl_p.h
src/webservice/: CMakeLists.txt  activesessionsresource.cpp  activesessionsresource.h  activesessionsresource_p.h  dbo_restresource.cpp  dbo_restresource.h  object.cpp  object.h  skyobjectsresource.cpp  skyobjectsresource.h  skyobjectsresource_p.h
src/widgets/: WGoogleMap  WGoogleMap.C  astroobjectstable.cpp  astroobjectstable.h  astroobjectwidget.cpp  astroobjectwidget.h  cataloguesdescriptionwidget.cpp  cataloguesdescriptionwidget.h  dssimage.cpp  dssimage.h  dsspage.cpp  dsspage.h  filterbyaltitudewidget.cpp  filterbyaltitudewidget.h  filterbycatalogue.cpp  filterbycatalogue.h  filterbyconstellation.cpp  filterbyconstellation.h  filterbymagnitudewidget.cpp  filterbymagnitudewidget.h  filterbyobservedwidget.cpp  filterbyobservedwidget.h  filterbyrangewidget.h  filterbyrangewidget_defs.h  filterbytypewidget.cpp  filterbytypewidget.h  instrumentstable.cpp  instrumentstable.h  moonphasecalendar.cpp  moonphasecalendar.h  navigationbar.cpp  navigationbar.h  notification.cpp  notification.h  notifications.cpp  notifications.h  objectdifficultywidget.cpp  objectdifficultywidget.h  objectnameswidget.cpp  objectnameswidget.h  (+9 more)
src/widgets/dss/: dsspage.cpp
src/widgets/filters/: filterbycatalogue.cpp  filterbycatalogue.h  (+4 more)
support/dss-cacher/: CMakeLists.txt  dss-cacher.cpp
tests/: CMakeLists.txt  angles_test.cpp  ephemeris_test.cpp  json_object_test.cpp  openweather_parsing_test.cpp  simple_test.cpp  test_helper.h  utils_test.cpp
tests/astro/: CMakeLists.txt  coordinates_conversion_test.cpp
tests/ephemeris/: skysector  skysector.cpp  test_skysector.py
tests/models/: test_telescope.py
tests/nova/: CMakeLists.txt  nova_test.cpp
(+157 files in other folders)
